z-index fix
Fixed bug where snow particles fell behind images.

--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@
   height: 100%;
   position: absolute;
   width: 100%;
+  z-index: 1;
 }
 
 
